Attempt to fix markdown editor cursor alignment issue

--- a/app/assets/stylesheets/forest/admin/partials/_markdown_editor.scss
+++ b/app/assets/stylesheets/forest/admin/partials/_markdown_editor.scss
@@ -5,3 +5,8 @@
   padding-top: 64px;
   padding-right: 30px;
 }
+
+// Fix text cursor alignment issue
+.CodeMirror pre {
+  margin-bottom: 0em !important;
+}
